summative.moria.Moria.scala.error
Erreur de compilation :
Moria:18: error: value r is not a member of Unit
    poseBiscuit()r
                 ^Moria:19: error: not found: value ecule
    ecule()
    ^