summative.moria.Moria.scala.code
while(!estFaceMur()){
  droite()
	droite()
	while(!estSurBiscuit() && !estFaceMur()){
      avance()
	}
  if(estSurBiscuit()){
    prendBiscuit()
    gauche()
		gauche()
  }
	while(porteBiscuit() && !estSurBiscuit()){
  	avance()
	}
	
  if(porteBiscuit()){
    recule()
    poseBiscuit()r
    ecule()
  }
}
droite()
avance()
gauche()
avance()